--- a/test.html
+++ b/test.html
@@ -1,1 +1,13 @@
-<!-- test -->
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>name</title>
+   </head>
+   <body>
+      <div class="web">
+         <header class="head"></header>
+         <div class="contents"></div>
+         <footer class="foot"></footer>
+      </div>
+   </body>
+</html>
