--- a/test.html
+++ b/test.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
       <title>name</title>
+      <link rel="stylesheet" href="test.css" />
    </head>
    <body>
       <div class="web">
